2015-11-06  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/68106
	* lra-remat.c (input_regno_present_p): Process hard regs
	explicitly present in machine description insns.
	(call_used_input_regno_present_p): Ditto.
	(calculate_gen_cands): Ditto.
	(do_remat): Ditto.

2015-11-02  Andreas Tobler  <andreast@gcc.gnu.org>

	* config/rs6000/freebsd64.h (ASM_SPEC32): Adapt spec to handle PIE
	executables.

2015-11-02  Steve Ellcey  <sellcey@imgtec.com>

	Backport from mainline
	2015-10-23  Steve Ellcey  <sellcey@imgtec.com>
	            Andrew Pinski  <apinski@cavium.com>

	PR rtl-optimization/67736
	* combine.c (simplify_comparison): Use gen_lowpart_or_truncate instead
	of gen_lowpart.

2015-10-28  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	Backport from mainline
	2015-10-27  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR target/68102
	* config/aarch64/aarch64.md (*movsi_aarch64): Check that
	operands[0] is a reg before taking its REGNO in split condition.
	(*movdi_aarch64): Likewise.

2015-10-27  Caroline Tice  <cmtice@google.com.

	(from Richard Biener)
	* tree.c (int_cst_hasher::hash):  Replace XOR with more efficient
	call to interative_hash_host_wide_int.

2015-10-27  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	Backport from mainline
	2015-10-26  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR middle-end/67989
	* optabs.c (expand_atomic_compare_and_swap): Handle case when
	ptarget_oval or ptarget_bool are const0_rtx.

2015-10-27  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR target/67929
	* config/arm/arm.c (vfp3_const_double_for_bits): Rewrite.
	* config/arm/constraints.md (Dp): Update callsite.
	* config/arm/predicates.md (const_double_vcvt_power_of_two): Likewise.

2015-10-27  Martin Jambor  <mjambor@suse.cz>

	* tree-sra.c (replace_removed_params_ssa_names): Change type of
	parameter stmt to gimple.

2015-10-26  Martin Jambor  <mjambor@suse.cz>

	Backport from mainline
	2015-10-09  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/67794